# demo-hhi-oracle

./: .gitignore  README.md
indexer/: .gitignore  Cargo.toml  README.md  dfx.json
indexer/scripts/: 0_deploy_and_setup.sh
indexer/src/common/: Cargo.toml
indexer/src/common/src/: config.rs  lib.rs  types.rs
indexer/src/core/: Cargo.toml
indexer/src/core/src/: lib.rs
indexer/src/hhi/: Cargo.toml
indexer/src/hhi/src/: lib.rs
indexer/src/hhi_snapshot/: Cargo.toml
indexer/src/hhi_snapshot/src/: lib.rs
indexer/src/indexer/: Cargo.toml
indexer/src/indexer/src/: lib.rs  store.rs
indexer/src/mapping/: Cargo.toml
indexer/src/mapping/src/: lib.rs  store.rs
indexer/src/network/: Cargo.toml
indexer/src/network/src/: lib.rs  nw.rs
indexer/src/relayer/: Cargo.toml
indexer/src/relayer/src/: lib.rs  store.rs  utils.rs
indexer/src/update_indexer_events/: package.json  tsconfig.json
indexer/src/update_indexer_events/src/: index.ts
oracle/: .env.template  .gitignore  README.md  hardhat.config.ts  package.json
oracle/contracts/: OracleV1.sol
oracle/contracts/test/: UpgradedOracleV1.sol
oracle/tasks/deployment/: oracles.ts
oracle/tasks/utils/: check.ts  common.ts
oracle/test/: OracleV1.ts
