[package]
name = "mapping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
futures = "0.3.28"
ic-cdk = "0.7.3"
ic-cdk-macros = "0.6.0"
ic-cdk-timers = "0.1.2"
serde = "1.0.160"
common = {path = "../common"}
ic-web3-rs = "0.1.0"
core = {path = "../core"}
chainsight-generate = {path = "../chainsight-generate"}
ic-stable-memory = "0.4.4"
